# sosistab2-obfsws

./: .gitignore  BUG.txt  BUG.txt.2  Cargo.toml  Cross.toml  README.md  bin-prune.py  build.rs  upx.sh
.github/workflows/: build.yml  rust.yml
examples/: obfsws-test-1.rs  obfsws-test-2.rs
scripts/: duplicate-deps.py
src/: lib.rs  listener.rs  main.rs  pipe.rs
src/bin.todo/: wsocks.rs
