[package]
name = "sosistab2-obfsws"
description = "Websocket Pipe (pluggable-transport) support for sosistab2"
authors = ["Delta4 <delta4chat@gmx.com>", "Your Name <you@example.com>"]
version = "0.2.6"
edition = "2021"
license = "MPL-2.0"
repository="https://github.com/delta4chat/sosistab2-obfsws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os="windows", target_os="macos"))'.dependencies]
async-tungstenite = { version="0.24.0", features = [ "async-std-runtime", "async-native-tls" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
async-tungstenite = { version="0.24.0", features = [ "async-std-runtime", "async-tls" ] }

[target.'cfg(any(target_os="freebsd", target_os="dragonfly", target_os="openbsd", target_os="netbsd"))'.dependencies]
async-tungstenite = { version="0.24.0", features = [ "async-std-runtime", "async-tls" ] }

[dependencies]
anyhow = "1.0.79"
async-h1 = "2.3.4"
async-lock = "3.3.0"
async-std = "1.12.0"
async-trait = "0.1.77"
base64 = "0.21.7"
bincode = "1.3.3"
blake3 = "1.5.0"
bytes = "1.5.0"
chacha20 = "0.9.1"
clap = { version = "4.4.13", features = ["derive"] }
env_logger = "0.10.1"
fastrand = "2.0.1"
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.111"
smol = "1.3.0"
smol-timeout = "0.6.0"
smolscale = "0.4.2"
socksv5 = "0.3.1"

sosistab2 = "0.10.19"
#sosistab2 = { git = "https://github.com/delta4chat/sosistab2" }

[build-dependencies]
vergen = { version = "8.2.8", features = ["build", "cargo", "git", "gitoxide", "rustc"] }

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
strip = "none"
codegen-units = 1024
overflow-checks = true
debug-assertions = true
debug = "full"
incremental = false

[profile.release]
panic = "unwind"
opt-level = 2
lto = true
strip = "none"
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = "limited"
incremental = false

